[package]
name = "strategy"
version = "0.1.0"
authors = ["nukonukomush <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.7"
linked-hash-map = "0.5.2"
maths-traits = "0.1.3"
approx = "0.3.2"


[lib]
name = "strategy"
crate-type = ["dylib"]
